ДоделалÐ Code\Decode. BruteForce в процессе

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>MKara.Krypto</groupId>
+            <artifactId>KryptoAnalizer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
